--- a/graphAlgorithmsVisualisation/src/app/canvas/canvas.component.html
+++ b/graphAlgorithmsVisualisation/src/app/canvas/canvas.component.html
@@ -1,3 +1,5 @@
+<button (click)="runBFS()">Run BFS</button>
+<button (click)="resetColors()">Reset Colors</button>
 <ngx-graph class="chart-container" [view]="[1400, 1000]" [showMiniMap]="false" [links]="edges" [nodes]="nodes">
 
     <ng-template #defsTemplate>
