added servevice wich controls running algorithms

--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -1,1 +1,5 @@
 <button (click)="addNode()">addVertex</button>
+<!--BFS-->
+<button (click)="changeRunningAlgorith(0)">Run BFS</button>
+<!--DFS-->
+<button (click)="changeRunningAlgorith(1)">">Run DFS</button>
