minor changes to graph-from (moved reserting to it), leged component added

--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -1,5 +1,7 @@
 <button (click)="addNode()">addVertex</button>
+<!--RESET-->
+<button (click)="changeRunningAlgorith(null)">Reset Colors</button>
 <!--BFS-->
 <button (click)="changeRunningAlgorith(0)">Run BFS</button>
 <!--DFS-->
-<button (click)="changeRunningAlgorith(1)">">Run DFS</button>
+<button (click)="changeRunningAlgorith(1)">Run DFS</button>
