refactored canvas/form added basic legend

--- a/graphAlgorithmsVisualisation/src/app/canvas/legend/legend.component.html
+++ b/graphAlgorithmsVisualisation/src/app/canvas/legend/legend.component.html
@@ -1,1 +1,6 @@
-<p>legend works!</p>
+<div class="legend">
+    LEGEND:
+    <div *ngFor="let element of legend">
+        {{element}}
+    </div>
+</div>
