--- a/graphAlgorithmsVisualisation/src/app/canvas/canvas.component.css
+++ b/graphAlgorithmsVisualisation/src/app/canvas/canvas.component.css
@@ -2,3 +2,11 @@ g.node rect,
 text {
     cursor: pointer;
 }
+
+div.container {
+    pointer-events: none;
+}
+
+ngx-graph {
+    pointer-events: all;
+}
