--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -1,7 +1,51 @@
-<input type="range" max="100" #ref (change)="setTime(ref.value)" />
-<!--RESET-->
-<button (click)="changeRunningAlgorith(null)">Reset Colors</button>
-<!--BFS-->
-<button (click)="changeRunningAlgorith(0)">Run BFS</button>
-<!--DFS-->
-<button (click)="changeRunningAlgorith(1)">Run DFS</button>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+            <!-- <li class="nav-item active">
+                <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+            </li> -->
+            <li class="nav-item">
+                <a class="nav-link" role="button" (click)="addNode()">Add Node</a>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Algorithms
+          </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" href="#" (click)="changeRunningAlgorith(0)">BFS</a>
+                    <a class="dropdown-item" href="#" (click)="changeRunningAlgorith(1)">DFS </a>
+                </div>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" (click)="changeRunningAlgorith(null)" role="button">Reset</a>
+            </li>
+            <!-- <li class="nav-item">
+                <a class="nav-link disabled" href="#">Disabled</a>
+            </li> -->
+        </ul>
+        <form class="form-inline my-2 my-lg-0">
+            <input type="range" max="100" #ref (change)="setTime(ref.value)" />
+        </form>
+    </div>
+</nav>
+
+
+<!-- <input type="range" max="100" #ref (change)="setTime(ref.value)" /> -->
+<!-- <div class="dropdown">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+      Dropdown button
+    </button>
+    <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+        <a class="dropdown-item" href="#" (click)="changeRunningAlgorith(0)">Run BFS</a>
+        <a class="dropdown-item" href="#" (click)="changeRunningAlgorith(1)">Run DFS </a>
+    </div>
+</div> -->
+<!-- <button type="button" class="btn btn-secondary" (click)="changeRunningAlgorith(null)">Reset Colors</button> -->
