--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <!-- <a class="navbar-brand" href="#">Navbar</a> -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
@@ -17,23 +17,36 @@
             </li>
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            Algorithms
+            Run Algorithms
           </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="#" (click)="changeRunningAlgorith(0)">BFS</a>
-                    <a class="dropdown-item" href="#" (click)="changeRunningAlgorith(1)">DFS </a>
+                    <a class="dropdown-item" (click)="changeRunningAlgorith(0)">BFS</a>
+                    <a class="dropdown-item" (click)="changeRunningAlgorith(1)">DFS </a>
+                </div>
+            </li>
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Algorithm Speed
+          </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" (click)="setTime(3000)">very slow</a>
+                    <a class="dropdown-item" (click)="setTime(2000)">slow </a>
+                    <a class="dropdown-item" (click)="setTime(1000)">medium </a>
+                    <a class="dropdown-item" (click)="setTime(500)">fast </a>
+                    <a class="dropdown-item" (click)="setTime(300)">very fast </a>
+                    <a class="dropdown-item" (click)="setTime(0)">instant </a>
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" (click)="changeRunningAlgorith(null)" role="button">Reset</a>
+                <a class="nav-link" (click)="changeRunningAlgorith(null)" role="button">Reset Colors</a>
             </li>
             <!-- <li class="nav-item">
                 <a class="nav-link disabled" href="#">Disabled</a>
             </li> -->
         </ul>
-        <form class="form-inline my-2 my-lg-0">
+        <!-- <form class="form-inline my-2 my-lg-0">
             <input type="range" max="100" #ref (change)="setTime(ref.value)" />
-        </form>
+        </form> -->
     </div>
 </nav>
 
