more pregenerated graphs

--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -39,9 +39,9 @@
             Pregenerated Graphs
           </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" role="button" (click)="generateGraph(0)">Dag </a>
-                    <a class="dropdown-item" role="button" (click)="generateGraph(1)">Petersen Graph // TODO </a>
-                    <a class="dropdown-item" role="button" (click)="generateGraph(2)">Strongly connected component //TODO </a>
+                    <a class="dropdown-item" role="button" (click)="generateGraph(0)">Directed Acyclic Graph Example </a>
+                    <a class="dropdown-item" role="button" (click)="generateGraph(1)">Binary Tree Example </a>
+                    <a class="dropdown-item" role="button" (click)="generateGraph(2)">Strongly connected component Example </a>
                 </div>
             </li>
             <!-- <li class="nav-item dropdown">
