added context menu for nodes

--- a/graphAlgorithmsVisualisation/src/app/canvas/canvas.component.html
+++ b/graphAlgorithmsVisualisation/src/app/canvas/canvas.component.html
@@ -1,7 +1,7 @@
 <div class="outerContainer">
     <div class="innerContainer">
 
-        <ngx-graph class="chart-container" [showMiniMap]="false" [links]="edges" [nodes]="nodes" [panOffsetX]="-1000">
+        <ngx-graph class="chart-container" [links]="edges" [nodes]="nodes" [zoomLevel]="0.9">
 
             <ng-template #defsTemplate>
                 <svg:marker id="arrow" viewBox="0 -5 10 10" refX="8" refY="0" markerWidth="4" markerHeight="4" orient="auto" stroke="#343a40" fill="#343a40">
@@ -10,8 +10,8 @@
             </ng-template>
 
             <ng-template #nodeTemplate let-node>
-                <svg:g class=" node " (click)="chooseNode(node)">
-                    <svg:rect [attr.width]="node.dimension.width " [attr.height]="node.dimension.height " [attr.fill]="node.data.customColor " [attr.stroke]="node.data.stroke" [attr.stroke-width]="node.data.stroke_width " />
+                <svg:g class=" node " (click)="chooseNode(node)" (contextmenu)="onContextMenu($event, node)" (dblclick)="manageEdge(node.id)">
+                    <svg:rect [attr.width]="node.dimension.width " [attr.height]="node.dimension.height " [attr.fill]="node.data.customColor " [attr.stroke]="node.data.stroke " [attr.stroke-width]="node.data.stroke_width " />
                     <svg:text alignment-baseline="central " [attr.x]="10 " [attr.y]="node.dimension.height / 2 ">
                         {{node.id}}
                     </svg:text>
@@ -20,7 +20,7 @@
 
             <ng-template #linkTemplate let-link>
                 <svg:g class=" edge ">
-                    <svg:path class="line " stroke-width="4" marker-end="url(#arrow)" stroke="#343a40"></svg:path>
+                    <svg:path class="line " stroke-width="4 " marker-end="url(#arrow) " stroke="#343a40 "></svg:path>
                     <svg:text class="edge-label " text-anchor="middle ">
                         <textPath class="text-path " [attr.href]=" '#' + link.id " [style.dominant-baseline]="link.dominantBaseline " startOffset="50% ">
                         </textPath>
@@ -32,4 +32,13 @@
 
     </div>
 </div>
-<!-- <app-legend></app-legend> -->
+
+<div style="visibility: hidden; position: fixed;" [style.left]="contextMenuPosition.x" [style.top]="contextMenuPosition.y" [matMenuTriggerFor]="contextMenu"></div>
+<mat-menu #contextMenu="matMenu">
+    <ng-template matMenuContent let-item="item">
+        <button mat-menu-item (click)="chooseNode(item)" [style.display]="choosenElement != item ? 'block': 'none'">Choose Node</button>
+        <button mat-menu-item (click)="dropNode()" [style.display]="choosenElement == item ? 'block': 'none'">Drop Node</button>
+        <button mat-menu-item (click)="manageEdge(item.id)" [style.display]="choosenElement != null ? 'block': 'none'">Create Edge / Destroy Edge</button>
+        <button mat-menu-item (click)="deleteNode(item)">Delete Node</button>
+    </ng-template>
+</mat-menu>
