--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.css
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.css
@@ -1,3 +1,4 @@
-/* .btn-secondary dropdown-toggle {
-    color: rgba(112, 109, 109, 0.822);
-} */
+.btn-secondary {
+    background-color: gray;
+    border-color: gray;
+}
