--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -15,12 +15,21 @@
             <li class="nav-item">
                 <a class="nav-link" role="button" (click)="addNode()">Add Node</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Graph Options
+          </a>
+                <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                    <a class="dropdown-item" (click)="changeRunningAlgorith(null)" role="button">Reset Graph </a>
+                    <a class="dropdown-item" (click)="generateGraph(null)" role="button">Delete Graph </a>
+                </div>
+            </li>
+            <!-- <li class="nav-item">
                 <a class="nav-link" (click)="changeRunningAlgorith(null)" role="button">Reset Graph</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" (click)="generateGraph(null)" role="button">Delete Graph</a>
-            </li>
+            </li> -->
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Pregenerated Graphs
@@ -65,6 +74,7 @@
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(2)">Find Strongly Connected Components </a>
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(3)">Find Bridges //TODO</a>
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(4)">Find Articulation Points //TODO</a>
+                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(5)">Run Dijkstra //TODO</a>
                     </div>
                 </div>
             </li>
