added prim algorithm

--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -35,7 +35,7 @@
             Pregenerated Graphs
           </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" role="button" (click)="generateGraph(3)">Random Graph</a>
+                    <a class="dropdown-item" role="button" (click)="generateGraph(3)">Random Directed Graph</a>
                     <a class="dropdown-item" role="button" (click)="generateGraph(0)">Directed Acyclic Graph Example </a>
                     <a class="dropdown-item" role="button" (click)="generateGraph(1)">Binary Tree Example </a>
                     <a class="dropdown-item" role="button" (click)="generateGraph(2)">Strongly Connected Component Graph Example </a>
@@ -74,7 +74,8 @@
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(2)">Find Strongly Connected Components </a>
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(3)">Find Bridges //TODO</a>
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(4)">Find Articulation Points //TODO</a>
-                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(5)">Run Dijkstra //TODO</a>
+                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(5)">Run Dijkstra </a>
+                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(6)">Run Prim (Graph Must Be Undirected) </a>
                     </div>
                 </div>
             </li>
