--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -76,6 +76,7 @@
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(4)">Find Articulation Points //TODO</a>
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(5)">Run Dijkstra </a>
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(6)">Run Prim (Graph Must Be Undirected) </a>
+                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(7)">Run Kruskal </a>
                     </div>
                 </div>
             </li>
