prep for 1st deploy

--- a/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
+++ b/graphAlgorithmsVisualisation/src/app/graph-form/graph-form.component.html
@@ -67,19 +67,19 @@
             <li>
                 <div class="btn-group">
                     <button type="button" class="btn btn-secondary dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Run Algorithms
+                    Run Algorithm
                     </button>
                     <div class="dropdown-menu">
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(0)">Run BFS</a>
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(1)">Run DFS </a>
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(2)">Find Strongly Connected Components </a>
-                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(3)">Find Bridges //TODO</a>
-                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(4)">Find Articulation Points //TODO</a>
+                        <!-- <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(3)">Find Bridges //TODO</a> -->
+                        <!-- <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(4)">Find Articulation Points //TODO</a> -->
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(5)">Run Dijkstra </a>
-                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(null)">Run Bellman-Ford //TODO</a>
+                        <!-- <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(8)">Run Bellman-Ford //TODO</a> -->
                         <!-- <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(6)">Run Prim (Graph Must Be Undirected) </a> -->
                         <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(7)">Run Kruskal </a>
-                        <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(null)">Run Ford-Fulkerson //TODO</a>
+                        <!-- <a class="dropdown-item" role="button" (click)="changeRunningAlgorith(9)">Run Ford-Fulkerson //TODO</a> -->
                     </div>
                 </div>
             </li>
